[project]
name = "methanegas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contextily>=1.7.1",
    "folium>=0.20.0",
    "geopandas>=1.1.4",
    "mapclassify>=2.10.0",
    "matplotlib>=3.11.1",
    "openpyxl>=3.1.5",
]
